# server/internal/bootstrap/server.go
@@ -6,10 +6,8 @@ import (
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	"net/http"
-	"server/internal/domain"
 	authHTTP "server/internal/domain/auth/http"
 	taskHTTP "server/internal/domain/task/http"
-	"server/internal/platform"
 )
 
 type Server struct {
@@ -35,24 +33,16 @@ func NewServer(deps Dependencies) *Server {
 
 	engine.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
-	handler := engine.Group("/api",
-		func(ctx *gin.Context) {
-			ctx.Set(platform.UserCtxKey, &domain.User{
-				ID:       1,
-				Username: "username_____",
-			})
-
-			ctx.Next()
-		})
+	handler := engine.Group("/api")
 
 	authHTTP.RegisterRoutes(handler.Group("/auth"), deps.UserService)
 
-	//handlerAuthorized := handler.Group("")
-	//handlerAuthorized.Use(authHTTP.JwtAuth(deps.UserService))
+	handlerAuthorized := handler.Group("")
+	handlerAuthorized.Use(authHTTP.JwtAuth(deps.Config, deps.UserService))
 
 	//userHTTP.RegisterRoutes(handlerAuthorized.Group("/users"), deps.UserService)
 
-	taskHTTP.RegisterRoutes(handler.Group("/task"), deps.TaskService)
+	taskHTTP.RegisterRoutes(handlerAuthorized.Group("/task"), deps.TaskService)
 
 	return &Server{
 		server: &http.Server{
