# server/internal/docs/swagger.json
@@ -12,6 +12,66 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/auth/login": {
+            "get": {
+                "description": "Login",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Login",
+                "operationId": "login",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/auth/signup": {
+            "get": {
+                "description": "Signup",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Signup",
+                "operationId": "signup",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "username",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/task": {
             "get": {
                 "security": [
@@ -210,7 +270,7 @@
             "type": "object",
             "properties": {
                 "complexity": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "created_at": {
                     "type": "string"
@@ -231,7 +291,7 @@
                     "type": "integer"
                 },
                 "priority": {
-                    "type": "string"
+                    "type": "integer"
                 },
                 "title": {
                     "type": "string"
@@ -242,14 +302,9 @@
             "type": "object",
             "properties": {
                 "complexity": {
-                    "type": "string",
-                    "enum": [
-                        "very_low",
-                        "low",
-                        "medium",
-                        "high",
-                        "very_high"
-                    ]
+                    "type": "integer",
+                    "maximum": 10,
+                    "minimum": 0
                 },
                 "deadline": {
                     "type": "string"
@@ -264,14 +319,9 @@
                     "type": "integer"
                 },
                 "priority": {
-                    "type": "string",
-                    "enum": [
-                        "very_low",
-                        "low",
-                        "medium",
-                        "high",
-                        "very_high"
-                    ]
+                    "type": "integer",
+                    "maximum": 10,
+                    "minimum": 0
                 },
                 "title": {
                     "type": "string"
