# server/internal/domain/user.go
@@ -33,8 +33,8 @@ func UsersFromEnt(slice []*ent.User) []*User {
 type UserService interface {
 	JWTToken(user *User) (string, error)
 	DataFromJWT(tokenStr string) (int, error)
-	Signup(ctx context.Context, username, password string) (string, error)
-	Login(ctx context.Context, userID int) (string, error)
+	Signup(ctx context.Context, username string) (string, error)
+	Login(ctx context.Context, username string) (string, error)
 
 	ByID(ctx context.Context, dto GetUserDTO) (*User, error)
 }
